# mod_nats

./: .gitignore  Dockerfile  README.md
mod_nats/: CMakeLists.txt  Makefile.am  mod_nats.c  mod_nats.h  mod_nats_connection.c  mod_nats_publisher.c  mod_nats_utils.c  nats.conf.xml
scripts/: build_mod_nats.sh  build_nats.c.sh  freeswitch.xml  run_freeswitch.sh
